cmake_minimum_required(VERSION 3.21)
project(Chapter5)
set(CMAKE_CXX_STANDARD 17)

add_executable(pair pair.cc)
add_executable(tuple tuple.cc)
add_executable(pointer smart-pointer.cc)
add_executable(numeric numeric.cc)
add_executable(trait Trait-Utility.cc)
add_executable(sup sup-function.cc)
add_executable(ratio ratio.cc)
add_executable(chrono chrono.cc)
add_executable(c_header c_header.cc)